# Vanguard-emulate

./: .gitignore  BUILDING.md  CHECKLIST.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VanguardEmulator.sln  VanguardEmulator.vcxproj  build.bat  config.ini
docs/: IMPLEMENTATION_SUMMARY.md  analysis_guide.md  protocol_analysis.md
include/: config.h  logger.h  message_parser.h  pipe_server.h  service_manager.h
logs/: README.md
logs/message_captures/: .gitkeep
src/: config.cpp  logger.cpp  main.cpp  message_parser.cpp  pipe_server.cpp  service_manager.cpp
